# rebar

./: .gitignore  Cargo.toml  README.md
bench/actix/: Cargo.toml  Dockerfile
bench/actix/common/: Cargo.toml
bench/actix/common/src/: lib.rs
bench/actix/compute/: Cargo.toml
bench/actix/compute/src/: main.rs
bench/actix/gateway/: Cargo.toml
bench/actix/gateway/src/: main.rs
bench/actix/store/: Cargo.toml
bench/actix/store/src/: main.rs
bench/go/: go.mod
bench/go/common/: common.go
bench/go/compute/: main.go
bench/go/gateway/: main.go
bench/go/store/: main.go
bench/rebar/: Cargo.toml
bench/rebar/common/: Cargo.toml
bench/rebar/common/src/: lib.rs
bench/rebar/compute/: Cargo.toml
bench/rebar/compute/src/: main.rs
bench/rebar/gateway/: Cargo.toml
bench/rebar/gateway/src/: main.rs
bench/rebar/store/: Cargo.toml
bench/rebar/store/src/: main.rs
clients/go/rebar/: actor.go  runtime.go
clients/python/: README.md  pyproject.toml
clients/python/rebar/: __init__.py  _ffi.py  actor.py  errors.py  runtime.py  types.py
clients/python/tests/: test_rebar.py
clients/typescript/: README.md  deno.json
clients/typescript/src/: runtime.ts
clients/typescript/tests/: rebar_test.ts
crates/rebar/: Cargo.toml
crates/rebar-cluster/: Cargo.toml
crates/rebar-cluster/src/: drain.rs  lib.rs  router.rs
crates/rebar-cluster/src/connection/: manager.rs
crates/rebar-cluster/src/protocol/: frame.rs
crates/rebar-cluster/src/registry/: mod.rs  orset.rs
crates/rebar-cluster/src/swim/: config.rs  detector.rs  gossip.rs  member.rs  mod.rs
crates/rebar-cluster/src/transport/: mod.rs  quic.rs  tcp.rs
crates/rebar-cluster/tests/: api_contract.rs  cluster_integration.rs
crates/rebar-core/: Cargo.toml
crates/rebar-core/benches/: message_passing.rs  process_lifecycle.rs  process_table.rs  supervisor.rs
crates/rebar-core/src/: lib.rs  router.rs  runtime.rs
crates/rebar-core/src/agent/: types.rs
crates/rebar-core/src/application/: env.rs  manager.rs  mod.rs  types.rs
crates/rebar-core/src/coordinator/: engine.rs  mod.rs  types.rs
crates/rebar-core/src/gen_server/: engine.rs  mod.rs  types.rs
crates/rebar-core/src/gen_stage/: dispatcher.rs  engine.rs  mod.rs  types.rs
crates/rebar-core/src/gen_statem/: engine.rs  mod.rs  types.rs
crates/rebar-core/src/partition_supervisor/: engine.rs  mod.rs  types.rs
crates/rebar-core/src/pg/: scope.rs
crates/rebar-core/src/process/: mailbox.rs  mod.rs  monitor.rs  table.rs  types.rs
crates/rebar-core/src/supervisor/: dynamic.rs  engine.rs  mod.rs  spec.rs
crates/rebar-core/src/sys/: mod.rs  types.rs
crates/rebar-core/src/task/: engine.rs  types.rs
crates/rebar-core/src/timer/: engine.rs  types.rs
crates/rebar-core/tests/: api_contract.rs  dynamic_supervisor_integration.rs  gen_server_integration.rs  integration.rs  sys_debug_integration.rs  timer_integration.rs
crates/rebar-ffi/: Cargo.toml
crates/rebar-ffi/src/: lib.rs
crates/rebar/src/: lib.rs
docs/: architecture.md  benchmarks.md  extending.md  getting-started.md
docs/api/: client-python.md  client-typescript.md  rebar-cluster.md  rebar-core.md  rebar-ffi.md
docs/guides/: actors-python.md  actors-typescript.md  agents.md  applications.md  coordinator.md  gen-server.md  gen-stage.md  gen-statem.md  partition-supervisor.md  process-groups.md  tasks.md  timers.md
docs/internals/: wire-protocol.md
docs/plans/: 01-task.md  02-agent.md  03-timer.md  04-process-groups.md  05-sys-debug.md  06-gen-statem.md  07-gen-stage.md  08-application.md  09-partition-supervisor.md  2026-03-03-docs-update-design.md  2026-03-03-docs-update-implementation.md  2026-03-03-documentation-implementation.md  2026-03-03-rebar-design.md  2026-03-03-rebar-implementation.md  2026-03-03-roadmap-implementation.md  2026-03-04-client-libraries-design.md  feature-tracking.md
