[workspace]
resolver = "2"
members = [
    "crates/rebar-core",
    "crates/rebar-cluster",
    "crates/rebar",
    "crates/rebar-ffi",
]
exclude = ["bench/rebar", "bench/actix"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/alexandernicholson/rebar"

[profile.bench]
debug = true

[profile.release]
debug = 1

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"

[workspace.lints.rust]
unsafe_code = "deny"
unused_imports = "deny"
dead_code = "deny"
