[package]
name = "rebar-cluster"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Distributed clustering, transport, and registry for the Rebar runtime"

[dependencies]
rebar-core = { path = "../rebar-core" }
tokio = { version = "1", features = ["full"] }
rmpv = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
quinn = "0.11"
rustls = "0.23"

[dev-dependencies]
tokio-test = "0.4"
