[package]
name = "rebar-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core actor primitives and supervision for the Rebar runtime"

[dependencies]
tokio = { version = "1", features = ["full"] }
dashmap = "6"
rmpv = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "message_passing"
harness = false

[[bench]]
name = "process_lifecycle"
harness = false

[[bench]]
name = "supervisor"
harness = false

[[bench]]
name = "process_table"
harness = false
