[package]
name = "bench-actix-store"
version = "0.1.0"
edition.workspace = true

[dependencies]
bench-actix-common = { path = "../common" }
actix-web.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dashmap.workspace = true
